remove port from start script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ticidesign <ticipp@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "PORT=5000 cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
     "build": "cross-env NODE_ENV=production keystone build",
     "start": "cross-env NODE_ENV=production keystone start"
   },
