--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@apollo/react-ssr": "^3.1.3",
-    "@emotion/core": "^10.0.14",
+    "@emotion/core": "^10.0.27",
     "@keystone-alpha/app-next": "^2.1.0",
     "@keystone-alpha/email": "^3.0.1",
-    "@keystonejs/adapter-mongoose": "^5.1.0",
-    "@keystonejs/app-admin-ui": "^5.0.1",
-    "@keystonejs/app-graphql": "^5.0.0",
-    "@keystonejs/auth-password": "^5.0.0",
-    "@keystonejs/fields": "^5.0.2",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
-    "@keystonejs/file-adapters": "^5.1.0",
-    "@keystonejs/keystone": "^5.1.0",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
+    "@keystonejs/adapter-mongoose": "^5.1.5",
+    "@keystonejs/app-admin-ui": "^5.7.1",
+    "@keystonejs/app-graphql": "^5.0.3",
+    "@keystonejs/auth-password": "^5.0.2",
+    "@keystonejs/fields": "^6.2.1",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.0.4",
+    "@keystonejs/file-adapters": "^5.4.0",
+    "@keystonejs/keystone": "^5.4.3",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
-    "cross-env": "^6.0.3",
-    "date-fns": "^2.6.0",
+    "cross-env": "^7.0.0",
+    "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "facepaint": "^1.2.1",
     "get-contrast": "^2.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.uniqby": "^4.7.0",
-    "react-toast-notifications": "^2.2.5",
-    "uuid": "^3.3.3"
+    "react-apollo": "^3.1.3",
+    "react-toast-notifications": "^2.4.0",
+    "uuid": "^3.4.0"
   }
 }
