--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
     "@emotion/core": "^10.0.14",
     "@keystone-alpha/app-next": "^2.1.0",
     "@keystone-alpha/email": "^3.0.1",
-    "@keystonejs/adapter-mongoose": "^5.1.0",
-    "@keystonejs/app-admin-ui": "^5.0.1",
+    "@keystonejs/adapter-mongoose": "^8.1.1",
+    "@keystonejs/app-admin-ui": "^6.0.2",
     "@keystonejs/app-graphql": "^5.0.0",
     "@keystonejs/auth-password": "^5.0.0",
-    "@keystonejs/fields": "^5.0.2",
+    "@keystonejs/fields": "^11.0.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
-    "@keystonejs/file-adapters": "^5.1.0",
-    "@keystonejs/keystone": "^5.1.0",
+    "@keystonejs/file-adapters": "^6.0.2",
+    "@keystonejs/keystone": "^9.0.1",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.2",
     "date-fns": "^2.6.0",
     "dotenv": "^8.2.0",
     "facepaint": "^1.2.1",
     "get-contrast": "^2.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.uniqby": "^4.7.0",
+    "react-apollo": "^3.1.5",
     "react-toast-notifications": "^2.2.5",
-    "uuid": "^3.3.3"
+    "uuid": "^8.1.0"
   }
 }
