--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "cross-env NODE_ENV=production keystone start"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-hooks": "3.1.3",
     "@apollo/react-ssr": "^3.1.3",
     "@emotion/core": "^10.0.28",
     "@keystone-alpha/app-next": "^2.1.0",
