--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "cross-env NODE_ENV=production keystone start"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-hooks": "3.1.3",
     "@apollo/react-ssr": "^3.1.3",
-    "@emotion/core": "^10.0.27",
+    "@emotion/core": "^10.0.28",
     "@keystone-alpha/app-next": "^2.1.0",
     "@keystone-alpha/email": "^3.0.1",
     "@keystonejs/adapter-mongoose": "^8.1.1",
@@ -32,6 +32,7 @@
     "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "facepaint": "^1.2.1",
+    "fast-memoize": "^2.5.2",
     "get-contrast": "^2.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.uniqby": "^4.7.0",
