--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "lodash.uniqby": "^4.7.0",
     "react-apollo": "^3.1.3",
+    "react-image-tooltip": "^4.0.2",
     "react-toast-notifications": "^2.4.0",
     "uuid": "^8.1.0"
   }
