--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
+    "apollo-server-express": "^2.16.1",
     "cross-env": "^7.0.2",
     "date-fns": "^2.6.0",
     "dotenv": "^8.2.0",
