--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "start": "cross-env NODE_ENV=production keystone start"
   },
   "dependencies": {
-    "@apollo/react-hooks": "3.1.3",
-    "@apollo/react-ssr": "^3.1.3",
+    "@apollo/react-hooks": "4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
     "@emotion/core": "^10.0.28",
     "@keystone-alpha/app-next": "^2.1.0",
     "@keystone-alpha/email": "^3.0.1",
-    "@keystonejs/adapter-mongoose": "8.1.3",
-    "@keystonejs/app-admin-ui": "7.0.5",
-    "@keystonejs/app-graphql": "5.1.9",
-    "@keystonejs/auth-password": "5.1.10",
-    "@keystonejs/fields": "13.0.2",
-    "@keystonejs/fields-wysiwyg-tinymce": "5.3.2",
-    "@keystonejs/file-adapters": "7.0.1",
-    "@keystonejs/keystone": "11.2.0",
+    "@keystonejs/adapter-mongoose": "10.0.0",
+    "@keystonejs/app-admin-ui": "7.3.8",
+    "@keystonejs/app-graphql": "6.1.3",
+    "@keystonejs/auth-password": "5.1.16",
+    "@keystonejs/fields": "19.1.0",
+    "@keystonejs/fields-cloudinary-image": "^2.0.1",
+    "@keystonejs/fields-wysiwyg-tinymce": "5.3.12",
+    "@keystonejs/file-adapters": "7.0.8",
+    "@keystonejs/keystone": "17.1.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
@@ -32,10 +33,10 @@
     "dotenv": "^8.2.0",
     "facepaint": "^1.2.1",
     "get-contrast": "^2.0.0",
-    "isomorphic-unfetch": "^3.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash.uniqby": "^4.7.0",
     "react-apollo": "^3.1.5",
     "react-toast-notifications": "^2.2.5",
-    "uuid": "^8.1.0"
+    "uuid": "^8.3.1"
   }
 }
