--- a/package.json
+++ b/package.json
@@ -1,42 +1,91 @@
 {
-  "name": "musescodejs",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/muses-code-js/musescodejs.git",
-  "author": "ticidesign <ticipp@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
-    "build": "cross-env NODE_ENV=production keystone build",
-    "start": "cross-env NODE_ENV=production keystone start"
-  },
-  "dependencies": {
-    "@apollo/react-hooks": "4.0.0",
-    "@apollo/react-ssr": "^4.0.0",
-    "@emotion/core": "^10.0.28",
-    "@keystone-alpha/app-next": "^2.1.0",
-    "@keystone-alpha/email": "^3.0.1",
-    "@keystonejs/adapter-mongoose": "10.0.0",
-    "@keystonejs/app-admin-ui": "7.3.8",
-    "@keystonejs/app-graphql": "6.1.3",
-    "@keystonejs/auth-password": "5.1.16",
-    "@keystonejs/fields": "19.1.0",
-    "@keystonejs/fields-cloudinary-image": "^2.0.1",
-    "@keystonejs/fields-wysiwyg-tinymce": "5.3.12",
-    "@keystonejs/file-adapters": "7.0.8",
-    "@keystonejs/keystone": "17.1.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.16",
-    "cross-env": "^7.0.2",
-    "date-fns": "^2.6.0",
-    "dotenv": "^8.2.0",
-    "facepaint": "^1.2.1",
-    "get-contrast": "^2.0.0",
-    "isomorphic-unfetch": "^3.1.0",
-    "lodash.uniqby": "^4.7.0",
-    "react-apollo": "^3.1.5",
-    "react-toast-notifications": "^2.2.5",
-    "uuid": "^8.3.1"
-  }
+    "name": "musescodejs",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/muses-code-js/musescodejs.git",
+    "author": "ticidesign <ticipp@gmail.com>",
+    "license": "MIT",
+    "config": {
+        "prettier": "--config ./.prettierrc ./**/*.{js,md,mdx}"
+    },
+    "scripts": {
+        "dev": "cross-env PORT=4000 NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+        "build": "cross-env NODE_ENV=production keystone build",
+        "start": "cross-env NODE_ENV=production keystone start",
+        "lint": "eslint .",
+        "format": "yarn prettier",
+        "prettier": "prettier --write $npm_package_config_prettier",
+        "format:check": "prettier --check $npm_package_config_prettier"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.2.6",
+        "@apollo/react-hooks": "4.0.0",
+        "@apollo/react-ssr": "^4.0.0",
+        "@babel/preset-react": "^7.12.5",
+        "@emotion/babel-plugin": "^11.0.0",
+        "@emotion/babel-preset-css-prop": "^11.0.0",
+        "@emotion/core": "^10.0.28",
+        "@emotion/eslint-plugin": "^11.0.0",
+        "@emotion/react": "^11.1.1",
+        "@keystonejs/adapter-mongoose": "10.0.1",
+        "@keystonejs/app-admin-ui": "7.3.9",
+        "@keystonejs/app-graphql": "6.1.3",
+        "@keystonejs/app-next": "^5.2.3",
+        "@keystonejs/auth-password": "5.1.17",
+        "@keystonejs/email": "^5.2.0",
+        "@keystonejs/fields": "20.1.0",
+        "@keystonejs/fields-cloudinary-image": "^2.1.0",
+        "@keystonejs/fields-wysiwyg-tinymce": "5.3.13",
+        "@keystonejs/file-adapters": "7.0.8",
+        "@keystonejs/keystone": "17.1.1",
+        "@keystonejs/server-side-graphql-client": "^1.1.2",
+        "apollo-boost": "^0.4.9",
+        "apollo-cache-inmemory": "^1.6.5",
+        "apollo-client": "^2.6.8",
+        "apollo-link-http": "^1.5.16",
+        "apollo-upload-client": "^14.1.3",
+        "babel-eslint": "^10.1.0",
+        "cross-env": "^7.0.1",
+        "date-fns": "^2.10.0",
+        "deepmerge": "^4.2.2",
+        "dotenv": "^8.2.0",
+        "eslint": "^7.13.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-plugin-cypress": "^2.11.1",
+        "eslint-plugin-emotion": "^11.0.0",
+        "eslint-plugin-flowtype": "^5.1.3",
+        "eslint-plugin-import": "^2.21.2",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-react": "^7.20.0",
+        "eslint-plugin-react-hooks": "^4.0.4",
+        "facepaint": "^1.2.1",
+        "get-contrast": "^2.0.0",
+        "graphql-tag": "^2.10.3",
+        "husky": "^4.2.5",
+        "isomorphic-unfetch": "^3.0.0",
+        "lodash.uniqby": "^4.7.0",
+        "next": "^10.0.1",
+        "prettier": "^2.0.5",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.1",
+        "react-apollo": "^3.1.3",
+        "react-dom": "^17.0.1",
+        "react-toast-notifications": "^2.4.0",
+        "uuid": "^8.1.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.js": [
+            "prettier",
+            "eslint",
+            "git add"
+        ]
+    },
+    "devDependencies": {
+        "jest": "^26.6.3"
+    }
 }
