--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,22 @@
 {
-    "presets": [
-      "@babel/preset-env",
-      [
-        "@babel/preset-react",
-        { "runtime": "automatic", "importSource": "@emotion/react" }
-      ]
+  "presets": [
+    [
+      "@babel/preset-env", 
+      {
+        "targets": {
+          "esmodules": true
+        }
+      }
     ],
-    "plugins": ["@emotion/babel-plugin"]
+    [
+      "next/babel",
+      {
+        "preset-react": {
+          "runtime": "automatic",
+          "importSource": "@emotion/react"
+        }
+      }
+    ]
+  ],
+  "plugins": ["@emotion/babel-plugin", "@babel/plugin-transform-runtime"]
 }
