--- a/package.json
+++ b/package.json
@@ -18,27 +18,24 @@
         "format:check": "prettier --check $npm_package_config_prettier"
     },
     "dependencies": {
-        "@apollo/client": "^3.2.6",
+        "@apollo/client": "^3.3.11",
         "@apollo/react-hooks": "4.0.0",
         "@apollo/react-ssr": "^4.0.0",
-        "@babel/preset-react": "^7.12.5",
-        "@emotion/babel-plugin": "^11.0.0",
-        "@emotion/babel-preset-css-prop": "^11.0.0",
-        "@emotion/core": "^10.0.28",
-        "@emotion/eslint-plugin": "^11.0.0",
-        "@emotion/react": "^11.1.1",
-        "@keystonejs/adapter-mongoose": "10.0.1",
-        "@keystonejs/app-admin-ui": "7.3.9",
-        "@keystonejs/app-graphql": "6.1.3",
-        "@keystonejs/app-next": "^5.2.3",
-        "@keystonejs/auth-password": "5.1.17",
-        "@keystonejs/email": "^5.2.0",
-        "@keystonejs/fields": "20.1.0",
-        "@keystonejs/fields-cloudinary-image": "^2.1.0",
-        "@keystonejs/fields-wysiwyg-tinymce": "5.3.13",
-        "@keystonejs/file-adapters": "7.0.8",
-        "@keystonejs/keystone": "17.1.1",
-        "@keystonejs/server-side-graphql-client": "^1.1.2",
+        "@babel/preset-react": "^7.12.13",
+        "@emotion/babel-plugin": "^11.2.0",
+        "@emotion/react": "^11.1.5",
+        "@keystonejs/adapter-mongoose": "11.2.0",
+        "@keystonejs/app-admin-ui": "7.5.0",
+        "@keystonejs/app-graphql": "6.3.0",
+        "@keystonejs/app-next": "^6.1.0",
+        "@keystonejs/auth-password": "6.1.0",
+        "@keystonejs/email": "^5.3.0",
+        "@keystonejs/fields": "22.1.1",
+        "@keystonejs/fields-cloudinary-image": "^2.2.0",
+        "@keystonejs/fields-wysiwyg-tinymce": "5.4.0",
+        "@keystonejs/file-adapters": "7.1.0",
+        "@keystonejs/keystone": "19.3.1",
+        "@keystonejs/server-side-graphql-client": "^2.1.0",
         "apollo-boost": "^0.4.9",
         "apollo-cache-inmemory": "^1.6.5",
         "apollo-client": "^2.6.8",
@@ -46,32 +43,38 @@
         "apollo-upload-client": "^14.1.3",
         "babel-eslint": "^10.1.0",
         "cross-env": "^7.0.1",
-        "date-fns": "^2.10.0",
+        "date-fns": "^2.19.0",
         "deepmerge": "^4.2.2",
         "dotenv": "^8.2.0",
-        "eslint": "^7.13.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-cypress": "^2.11.1",
-        "eslint-plugin-emotion": "^11.0.0",
-        "eslint-plugin-flowtype": "^5.1.3",
-        "eslint-plugin-import": "^2.21.2",
-        "eslint-plugin-jest": "^24.1.3",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^4.0.4",
+        "eslint": "^7.22.0",
         "facepaint": "^1.2.1",
         "get-contrast": "^2.0.0",
         "graphql-tag": "^2.10.3",
-        "husky": "^4.2.5",
+        "husky": "^5.1.3",
         "isomorphic-unfetch": "^3.0.0",
         "lodash.uniqby": "^4.7.0",
-        "next": "^10.0.1",
+        "next": "^10.0.8",
         "prettier": "^2.0.5",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-apollo": "^3.1.3",
         "react-dom": "^17.0.1",
-        "react-toast-notifications": "^2.4.0",
+        "react-toast-notifications": "^2.4.3",
         "uuid": "^8.1.0"
+    },
+    "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.13.10",
+        "@emotion/eslint-plugin": "^11.2.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-cypress": "^2.11.1",
+        "eslint-plugin-emotion": "^11.0.0",
+        "eslint-plugin-flowtype": "^5.4.0",
+        "eslint-plugin-import": "^2.21.2",
+        "eslint-plugin-jest": "^24.3.1",
+        "eslint-plugin-react": "^7.20.0",
+        "eslint-plugin-react-hooks": "^4.0.4",
+        "jest": "^26.6.3",
+        "lint-staged": "^10.5.4"
     },
     "husky": {
         "hooks": {
@@ -84,8 +87,5 @@
             "eslint",
             "git add"
         ]
-    },
-    "devDependencies": {
-        "jest": "^26.6.3"
     }
 }
