--- a/package.json
+++ b/package.json
@@ -1,91 +1,83 @@
 {
-    "name": "musescodejs",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "https://github.com/muses-code-js/musescodejs.git",
-    "author": "ticidesign <ticipp@gmail.com>",
-    "license": "MIT",
-    "config": {
-        "prettier": "--config ./.prettierrc ./**/*.{js,md,mdx}"
-    },
-    "scripts": {
-        "dev": "cross-env PORT=4000 NODE_ENV=development DISABLE_LOGGING=true keystone dev",
-        "build": "cross-env NODE_ENV=production keystone build",
-        "start": "cross-env NODE_ENV=production keystone start",
-        "lint": "eslint .",
-        "format": "yarn prettier",
-        "prettier": "prettier --write $npm_package_config_prettier",
-        "format:check": "prettier --check $npm_package_config_prettier"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.3.11",
-        "@apollo/react-hooks": "4.0.0",
-        "@apollo/react-ssr": "^4.0.0",
-        "@babel/preset-react": "^7.12.13",
-        "@emotion/babel-plugin": "^11.2.0",
-        "@emotion/react": "^11.1.5",
-        "@keystonejs/adapter-mongoose": "11.2.0",
-        "@keystonejs/app-admin-ui": "7.5.0",
-        "@keystonejs/app-graphql": "6.3.0",
-        "@keystonejs/app-next": "^6.1.0",
-        "@keystonejs/auth-password": "6.1.0",
-        "@keystonejs/email": "^5.3.0",
-        "@keystonejs/fields": "22.1.1",
-        "@keystonejs/fields-cloudinary-image": "^2.2.0",
-        "@keystonejs/fields-wysiwyg-tinymce": "5.4.0",
-        "@keystonejs/file-adapters": "7.1.0",
-        "@keystonejs/keystone": "19.3.1",
-        "@keystonejs/server-side-graphql-client": "^2.1.0",
-        "apollo-boost": "^0.4.9",
-        "apollo-cache-inmemory": "^1.6.5",
-        "apollo-client": "^2.6.8",
-        "apollo-link-http": "^1.5.16",
-        "apollo-upload-client": "^14.1.3",
-        "babel-eslint": "^10.1.0",
-        "cross-env": "^7.0.1",
-        "date-fns": "^2.19.0",
-        "deepmerge": "^4.2.2",
-        "dotenv": "^8.2.0",
-        "eslint": "^7.22.0",
-        "facepaint": "^1.2.1",
-        "get-contrast": "^2.0.0",
-        "graphql-tag": "^2.10.3",
-        "husky": "^5.1.3",
-        "isomorphic-unfetch": "^3.0.0",
-        "lodash.uniqby": "^4.7.0",
-        "next": "^10.0.8",
-        "prettier": "^2.0.5",
-        "prop-types": "^15.7.2",
-        "react": "^17.0.1",
-        "react-apollo": "^3.1.3",
-        "react-dom": "^17.0.1",
-        "react-toast-notifications": "^2.4.3",
-        "uuid": "^8.1.0"
-    },
-    "devDependencies": {
-        "@babel/plugin-transform-runtime": "^7.13.10",
-        "@emotion/eslint-plugin": "^11.2.0",
-        "eslint-config-prettier": "^8.1.0",
-        "eslint-plugin-cypress": "^2.11.1",
-        "eslint-plugin-emotion": "^11.0.0",
-        "eslint-plugin-flowtype": "^5.4.0",
-        "eslint-plugin-import": "^2.21.2",
-        "eslint-plugin-jest": "^24.3.1",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^4.0.4",
-        "jest": "^26.6.3",
-        "lint-staged": "^10.5.4"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "lint-staged": {
-        "*.js": [
-            "prettier",
-            "eslint",
-            "git add"
-        ]
+  "name": "musescodejs",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/muses-code-js/musescodejs.git",
+  "author": "ticidesign <ticipp@gmail.com>",
+  "license": "MIT",
+  "config": {
+    "prettier": "--config ./.prettierrc ./**/*.{js,md,mdx}"
+  },
+  "scripts": {
+    "dev": "cross-env PORT=4000 NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "build": "cross-env NODE_ENV=production keystone build",
+    "start": "cross-env NODE_ENV=production keystone start",
+    "lint": "eslint .",
+    "format": "yarn prettier",
+    "prettier": "prettier --write $npm_package_config_prettier",
+    "format:check": "prettier --check $npm_package_config_prettier"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.3.11",
+    "@apollo/react-hooks": "4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "@babel/preset-react": "^7.12.13",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/react": "^11.1.5",
+    "@keystone-6/auth": "^1.0.2",
+    "@keystone-6/core": "^1.0.1",
+    "@keystone-6/fields-document": "^1.0.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
+    "apollo-upload-client": "^14.1.3",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.1",
+    "date-fns": "^2.19.0",
+    "deepmerge": "^4.2.2",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
+    "facepaint": "^1.2.1",
+    "get-contrast": "^2.0.0",
+    "graphql-tag": "^2.10.3",
+    "husky": "^5.1.3",
+    "isomorphic-unfetch": "^3.0.0",
+    "lodash.uniqby": "^4.7.0",
+    "next": "^12.0.7",
+    "prettier": "^2.0.5",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^17.0.2",
+    "react-toast-notifications": "^2.4.3",
+    "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@emotion/eslint-plugin": "^11.2.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-emotion": "^11.0.0",
+    "eslint-plugin-flowtype": "^5.4.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^24.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "typescript": "^4.5.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier",
+      "eslint",
+      "git add"
+    ]
+  }
 }
